- Delivery Method - Deposit - Label on aset - Delivery Pricing - Regis form - Activation form

--- a/app/src/main/res/layout/activity_terms_policy.xml
+++ b/app/src/main/res/layout/activity_terms_policy.xml
@@ -19,9 +19,14 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <WebView
+    <!--<WebView-->
+        <!--android:id="@+id/webview"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="fill_parent"/>-->
+
+    <im.delight.android.webview.AdvancedWebView
         android:id="@+id/webview"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </android.support.design.widget.CoordinatorLayout>
