--- a/app/src/main/res/layout/content_detail_aset.xml
+++ b/app/src/main/res/layout/content_detail_aset.xml
@@ -1246,6 +1246,143 @@
 
                     </LinearLayout>
 
+                    <LinearLayout
+                        android:id="@+id/row_delivery_price"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/small_space"
+                        android:background="@color/colorPrimarySoft"
+                        android:orientation="vertical"
+                        android:padding="@dimen/xmin_padding"
+                        android:visibility="visible">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Biaya Pengiriman"
+                            android:textColor="@color/colorBlack54"
+                            android:textSize="@dimen/calendar_text_small" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            >
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/min_padding"
+                                android:textColor="@color/colorBlack"
+                                android:textSize="@dimen/almost_tiny_text"
+                                android:layout_weight="1"
+                                android:text="Jarak Maksimal" />
+
+                            <TextView
+                                android:id="@+id/as_delivery_distance"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/colorBlack"
+                                android:layout_weight="1"
+                                android:textSize="@dimen/calendar_text_small"
+                                android:textAlignment="textEnd"
+                                tools:text="0 KM" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            >
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/min_padding"
+                                android:textColor="@color/colorBlack"
+                                android:textSize="@dimen/almost_tiny_text"
+                                android:layout_weight="1"
+                                android:text="Biaya per KM" />
+
+                            <TextView
+                                android:id="@+id/as_delivery_price"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/colorBlack"
+                                android:layout_weight="1"
+                                android:textSize="@dimen/calendar_text_small"
+                                android:textAlignment="textEnd"
+                                tools:text="2.000 IDR" />
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/small_space"
+                        android:background="@color/colorPrimarySoft"
+                        android:orientation="vertical"
+                        android:padding="@dimen/xmin_padding"
+                        android:visibility="visible">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            >
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Pakai Uang Jaminan Sewa (Deposit)"
+                                android:textColor="@color/colorBlack54"
+                                android:textSize="@dimen/calendar_text_small" />
+
+                            <TextView
+                                android:id="@+id/as_deposit"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/colorBlack"
+                                android:layout_weight="1"
+                                android:textSize="@dimen/calendar_text_small"
+                                android:textAlignment="textEnd"
+                                tools:text="Ya" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/row_deposit"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:visibility="gone"
+                            >
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/min_padding"
+                                android:textColor="@color/colorBlack"
+                                android:textSize="@dimen/almost_tiny_text"
+                                android:layout_weight="1"
+                                android:text="Nominal Deposit" />
+
+                            <TextView
+                                android:id="@+id/as_nominal_deposit"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/colorBlack"
+                                android:layout_weight="1"
+                                android:textSize="@dimen/calendar_text_small"
+                                android:textAlignment="textEnd"
+                                tools:text="2.000 IDR" />
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -1323,6 +1460,7 @@
             </android.support.v7.widget.CardView>
 
         </LinearLayout>
+
     </ScrollView>
 
 </LinearLayout>
