--- a/app/src/main/res/layout/content_withdrawal.xml
+++ b/app/src/main/res/layout/content_withdrawal.xml
@@ -136,7 +136,7 @@
             android:layout_margin="0dp"
             android:background="@color/colorPrimaryDark"
             android:padding="0dp"
-            android:text="Withdrawal"
+            android:text="Tarik dana"
             android:textColor="@color/colorWhite"
             android:textSize="@dimen/medium_text" />
     </RelativeLayout>
