--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,6 +27,7 @@
     <color name="colorGreenSoft">#9bd996</color>
     <color name="colorGreenLight">#99cc00</color>
     <color name="colorInactive">#ff5050</color>
+    <color name="colorGreenLabel">#99cc00</color>
 
     <color name="roleSuperadmin">#ff2828</color>
     <color name="roleAdmin">#99cc00</color>
