--- a/app/src/main/res/layout/activity_onboard.xml
+++ b/app/src/main/res/layout/activity_onboard.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="@color/colorBlack87"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="id.rentist.mitrarentist.OnBoardActivity">
 
 
     <android.support.v4.view.ViewPager
@@ -38,7 +40,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:background="@null"
-            android:text="NEXT"
+            android:text="BERIKUTNYA"
             android:textColor="@android:color/white" />
 
         <Button
@@ -48,7 +50,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:background="@null"
-            android:text="SKIP"
+            android:text="LEWATI"
             android:textColor="@android:color/white" />
 
     </RelativeLayout>
