--- a/app/src/main/res/layout/content_form_registration.xml
+++ b/app/src/main/res/layout/content_form_registration.xml
@@ -98,7 +98,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/xmin_padding"
-                        android:text="Pemilik Rental" />
+                        android:text="Pemilik / Penanggungjawab Rental" />
 
                     <EditText
                         android:id="@+id/reg_own_name"
