--- a/app/src/main/res/layout/content_aktifasi.xml
+++ b/app/src/main/res/layout/content_aktifasi.xml
@@ -69,6 +69,14 @@
             android:layout_marginTop="@dimen/thumb_med_height"
             android:orientation="vertical">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/xmin_padding"
+                android:text="@string/activation_text_check"
+                android:textAlignment="center"
+                android:textColor="@color/colorWhite" />
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
