--- a/app/src/main/res/layout/content_form_motorcycle_aset.xml
+++ b/app/src/main/res/layout/content_form_motorcycle_aset.xml
@@ -661,9 +661,53 @@
                         </LinearLayout>
                     </LinearLayout>
 
+                    <!--<LinearLayout-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:orientation="vertical"-->
+                        <!--android:padding="@dimen/xmin_padding">-->
+
+                        <!--<TextView-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:text="Metode Pengiriman"-->
+                            <!--android:textColor="@color/colorBlack"-->
+                            <!--android:textSize="12sp" />-->
+
+                        <!--<LinearLayout-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:orientation="horizontal"-->
+                            <!--android:background="@color/colorNearWhite">-->
+
+                            <!--<CheckBox-->
+                                <!--android:id="@+id/as_ck_delivery"-->
+                                <!--android:layout_width="wrap_content"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:layout_marginTop="@dimen/xmin_padding"-->
+                                <!--android:layout_weight="1"-->
+                                <!--android:checked="true"-->
+                                <!--android:paddingEnd="@dimen/min_padding"-->
+                                <!--android:text="Dikirim" />-->
+
+                            <!--<CheckBox-->
+                                <!--android:id="@+id/as_ck_pickup"-->
+                                <!--android:layout_width="wrap_content"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:layout_marginTop="@dimen/xmin_padding"-->
+                                <!--android:layout_weight="1"-->
+                                <!--android:checked="true"-->
+                                <!--android:paddingEnd="@dimen/min_padding"-->
+                                <!--android:text="Diambil" />-->
+                        <!--</LinearLayout>-->
+
+                    <!--</LinearLayout>-->
+
                     <LinearLayout
+                        android:id="@+id/row_delivery_method"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="@dimen/xmin_padding"
                         android:orientation="vertical"
                         android:padding="@dimen/xmin_padding">
 
@@ -677,29 +721,214 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:background="@color/colorNearWhite">
+                            android:background="@color/colorNearWhite"
+                            android:orientation="vertical">
 
-                            <CheckBox
-                                android:id="@+id/as_ck_delivery"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/xmin_padding"
-                                android:layout_weight="1"
-                                android:checked="true"
-                                android:paddingEnd="@dimen/min_padding"
-                                android:text="Dikirim" />
+                            <RadioGroup
+                                android:id="@+id/delivery_group"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="@color/colorNearWhite"
+                                android:checkedButton="@+id/r_manual"
+                                android:orientation="horizontal"
+                                android:padding="@dimen/xmin_padding">
 
-                            <CheckBox
-                                android:id="@+id/as_ck_pickup"
-                                android:layout_width="wrap_content"
+                                <RadioButton
+                                    android:id="@+id/r_pickup"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginEnd="10dp"
+                                    android:layout_weight="1"
+                                    android:buttonTint="@color/colorPrimary"
+                                    android:checked="true"
+                                    android:contextClickable="false"
+                                    android:text="Diambil" />
+
+                                <RadioButton
+                                    android:id="@+id/r_deliver"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:buttonTint="@color/colorPrimary"
+                                    android:text="Dikirim" />
+
+                                <!--<RadioButton-->
+                                <!--android:id="@+id/r_logistic"-->
+                                <!--android:layout_width="wrap_content"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:layout_weight="1"-->
+                                <!--android:buttonTint="@color/colorPrimary"-->
+                                <!--android:text="Logistik" />-->
+
+                            </RadioGroup>
+
+                            <LinearLayout
+                                android:id="@+id/delivery_detail"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/xmin_padding"
-                                android:layout_weight="1"
-                                android:checked="true"
-                                android:paddingEnd="@dimen/min_padding"
-                                android:text="Diambil" />
+                                android:orientation="vertical"
+                                android:visibility="gone">
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="horizontal">
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="Biaya Pengiriman : "
+                                        android:textColor="@color/colorBlack"
+                                        android:textSize="12sp" />
+
+                                    <TextView
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:text="*sentuh untuk memilih biaya pengiriman"
+                                        android:textColor="@color/colorBlack54"
+                                        android:textSize="@dimen/tiny_text" />
+
+                                </LinearLayout>
+
+                                <TextView
+                                    android:id="@+id/delivery_price"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:background="@color/colorButtonDefault"
+                                    android:clickable="true"
+                                    android:padding="@dimen/xmin_padding"
+                                    android:text="Pilih Biaya Pengiriman"
+                                    android:textAlignment="center"
+                                    android:textSize="@dimen/under_small_text"
+                                    />
+                            </LinearLayout>
+
+                            <!--<android.support.v7.widget.RecyclerView-->
+                            <!--android:id="@+id/as_delivery"-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="200dp"-->
+                            <!--android:background="@color/colorNearWhite"-->
+                            <!--android:padding="@dimen/xmin_padding"-->
+                            <!--android:visibility="gone" />-->
+
+                            <!--<CheckBox-->
+                            <!--android:id="@+id/as_ck_delivery"-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:layout_marginTop="@dimen/xmin_padding"-->
+                            <!--android:layout_weight="1"-->
+                            <!--android:checked="true"-->
+                            <!--android:paddingEnd="@dimen/min_padding"-->
+                            <!--android:text="Dikirim" />-->
+
+                            <!--<CheckBox-->
+                            <!--android:id="@+id/as_ck_pickup"-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:layout_marginTop="@dimen/xmin_padding"-->
+                            <!--android:layout_weight="1"-->
+                            <!--android:checked="true"-->
+                            <!--android:paddingEnd="@dimen/min_padding"-->
+                            <!--android:text="Diambil" />-->
+
                         </LinearLayout>
+
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/row_deposit"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="@dimen/xmin_padding"
+                        android:orientation="vertical"
+                        android:padding="@dimen/xmin_padding">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Pakai Uang Jaminan Sewa (Deposit)"
+                            android:textColor="@color/colorBlack"
+                            android:textSize="12sp" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@color/colorNearWhite"
+                            android:orientation="vertical">
+
+                            <RadioGroup
+                                android:id="@+id/deposit_group"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="@color/colorNearWhite"
+                                android:checkedButton="@+id/r_manual"
+                                android:orientation="horizontal"
+                                android:padding="@dimen/xmin_padding">
+
+                                <RadioButton
+                                    android:id="@+id/r_no_deposit"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginEnd="10dp"
+                                    android:layout_weight="1"
+                                    android:buttonTint="@color/colorPrimary"
+                                    android:checked="true"
+                                    android:text="Tidak" />
+
+                                <RadioButton
+                                    android:id="@+id/r_deposit"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:buttonTint="@color/colorPrimary"
+                                    android:text="Ya" />
+
+                            </RadioGroup>
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/row_deposit_value"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:visibility="gone">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Nominal Deposit :"
+                                android:textColor="@color/colorBlack"
+                                android:textSize="12sp" />
+
+                            <RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+
+                                <com.aldoapps.autoformatedittext.AutoFormatEditText
+                                    android:id="@+id/as_nominal_deposit"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:background="@color/colorNearWhite"
+                                    android:ems="10"
+                                    android:hint="0"
+                                    android:maxLength="13"
+                                    android:padding="@dimen/min_padding"
+                                    app:isDecimal="false" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_alignParentEnd="true"
+                                    android:layout_centerVertical="true"
+                                    android:layout_marginEnd="@dimen/min_padding"
+                                    android:text="IDR"
+                                    android:textColor="@color/colorGrey"
+                                    android:textSize="@dimen/medium_text" />
+                            </RelativeLayout>
+
+                        </LinearLayout>
+
 
                     </LinearLayout>
 
@@ -1906,6 +2135,20 @@
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
+
+            <Button
+                android:id="@+id/btn_save"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/btn_lmedium_height"
+                android:layout_alignParentBottom="true"
+                android:layout_gravity="bottom"
+                android:layout_marginTop="@dimen/xmin_padding"
+                android:layout_marginBottom="@dimen/xmin_padding"
+                android:background="@color/colorPrimaryDark"
+                android:textAlignment="center"
+                android:text="Tambah"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/medium_text" />
 
         </LinearLayout>
 
